Fixing lightbox arrow issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -233,6 +233,7 @@ option:hover {
   
 .next {
   right: 0;
+  margin-left: auto;
   justify-content: right;
   padding-right: 10px;
 }
